samples/_failures_safe/1761127622_a9998b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df856712.c: In function ‘main’:
./samples/SAFE/__tmp_df856712.c:149:5: error: expected expression at end of input
  149 |     size_t display_count = compressed_size <
      |     ^~~~~~
./samples/SAFE/__tmp_df856712.c:149:5: error: expected declaration or statement at end of input
